--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 :root {
   --text-color: white;
-  --bg-url: url(./assets/bg-desktop-dark\ .jpg);
+  --bg-url: url(./assets/bg-mobile-dark.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-houver: rgba(0, 0, 0, 0.02);
@@ -134,4 +134,13 @@ footer {
 }
 footer a {
   text-decoration: none;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop-dark.jpg);
+  }
+  .light {
+    --bg-url: url(.assets/bg-desktop-light.jpg);
+  }
 }
